# CMake

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/dynamic_module/: CMakeLists.txt  math_dynamic.cpp  math_dynamic.hpp
src/static_module/: CMakeLists.txt  math_static.cpp  math_static.hpp
unittests/: test.cpp
